# kanazawa-dirt-one-spear

./: .gitignore  CLAUDE.md  README.md  compose.yaml  package-lock.json  package.json
backend/: DB_REBUILD_PROCEDURE.md  Dockerfile  PHASE2_PROGRESS.md  build_stats_tables.py  check_counts.sh  download_missing_results_safe.sh  get_schedule_for_yaml.py  html_to_yaml.py  integrate_jockey_master.py  list_missing_results.py  list_missing_results.sh  missing_results.txt  parse_course_records.py  parse_jockey_master.py  pyproject.toml  reset_db.py  schema.sql  scrape_2024_2023.sh  scrape_all_years.sh  scrape_from_yaml.py  scrape_missing_results.sh  yaml_to_db.py
backend/app/: crud.py  database.py  fetch_races.py  main.py  models.py  predictor.py  sample_data.py
backend/app/scrapers/: nar_scraper.py
backend/data/: 2015_schedule.yaml  2016_schedule.yaml  2017_schedule.yaml  2018_schedule.yaml  2019_schedule.yaml  2020_schedule.yaml  2021_schedule.yaml  2022_schedule.yaml  2023_schedule.yaml  2024_schedule.yaml  2025_schedule.yaml  scraping_notes.md
backend/data/html/2015/20150404/: race_01_deba.html  race_01_result.html  race_02_deba.html  race_02_result.html  race_03_deba.html  race_03_result.html  race_04_deba.html  race_04_result.html  race_05_deba.html  race_05_result.html  race_06_deba.html  race_06_result.html  race_07_deba.html  race_07_result.html  (+9 more)
backend/data/reference_data/: README.md
backend/data/reference_data/html/: course_records.html
backend/data/reference_data/json/: course_records.json
backend/data/reference_data/yaml/: course_records.yaml
(+35821 files in other folders)
